# catch-pokemon

./: .gitignore  BATTLE-ODDS.md  Cargo.toml  INSTALLATION.md  PUBLISHING.md  README.md  battles.md  build.rs  docker-compose.yml  install-remote.sh  install.sh  pokemon_data.json  uninstall.sh
.github/workflows/: deploy-api.yml  release.yml
api/: Dockerfile  fly.toml  go.mod
api/cmd/: main.go
api/internal/auth/: google.go
api/internal/battle/: engine.go  store.go
api/internal/db/: battles.go  db.go  trades.go  users.go
api/internal/handlers/: handlers.go  trade.go
api/internal/matchmaking/: queue.go
api/internal/middleware/: auth.go
api/internal/models/: models.go
api/internal/trade/: store.go
api/internal/verify/: verify.go
api/migrations/: 001_init.sql  002_trades.sql
api/test/: player-1.sh  player-2.sh  trade-browse.sh  trade-manage.sh  trade-offer.sh  trade-post.sh
cli/: Cargo.toml  build.rs
cli/data/: pokemon.json
cli/shell/: functions.sh
cli/src/: api.rs  battle.rs  catch.rs  crypto.rs  display.rs  main.rs  models.rs  pc_tui.rs  pokedex_tui.rs  setup.rs  storage.rs  trade.rs
cli/static/art/: pokeball-caught.txt  pokeball-left.txt  pokeball-right.txt
data/: pokemon.json  valid_pokemon.txt
scripts/: admin-encrypt.py
shell/: functions.sh
src/: main.rs
static/art/: pokeball-not-caught.txt  pokeball-still.txt
