[package]
name = "catch-pokemon"
version = "0.1.0"
edition = "2021"
authors = ["Matthew Myrick"]
description = "A CLI tool to catch Pokemon that appear in your terminal"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
rand = "0.8"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
