[package]
name = "catch-pokemon"
version = "1.0.2"
edition = "2021"
authors = ["Matthew Myrick"]
description = "A CLI tool to catch Pokemon in your terminal with animated ASCII art"
license = "MIT"
repository = "https://github.com/matthewmyrick/catch-pokemon"
homepage = "https://github.com/matthewmyrick/catch-pokemon"
readme = "README.md"
keywords = ["pokemon", "cli", "game", "terminal"]
categories = ["command-line-utilities", "games"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
rand = "0.8"
crossterm = { version = "0.28", features = ["event-stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
